<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/ocre"
    tools:context="com.sotaiga.apps.gimcanace20.AboutActivity">

    <RelativeLayout
        android:id="@+id/topbar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/topbar_padding"
        android:background="@drawable/selector_topbar_background">

        <ImageButton
            android:id="@+id/backwards_button"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/selector_round_backwards_button_src"
            android:contentDescription="@string/main_menu_button_content_description"
            android:clickable="true"
            android:focusable="true"
            style="@style/generic_black_button"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topbar_relative_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/h1"
                android:text="@string/about_h1" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/dotted_line_color_fosc" />

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_version_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewText
                android:id="@+id/about_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_db_version_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewText
                android:id="@+id/about_db_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_sdk_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewText
                android:id="@+id/about_sdk_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_display_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewText
                android:id="@+id/about_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_code_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_code_text"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_design_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_design_text"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_text"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_collaboration_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_collaboration_text"
                android:textSize="19sp"
                android:textColor="@android:color/black"/>

            <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                android:id="@+id/about_rate_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_big_margin"
                android:text="@string/about_rate_link"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/dotted_line_color_fosc" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
