<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/ocre"
    tools:context="com.sotaiga.apps.gimcanace20.LoginActivity">

    <RelativeLayout
        android:id="@+id/topbar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/topbar_padding"
        android:background="@drawable/selector_topbar_background">

        <ImageButton
            android:id="@+id/backwards_button"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/selector_round_backwards_button_src"
            android:contentDescription="@string/main_menu_button_content_description"
            android:clickable="true"
            android:focusable="true"
            style="@style/generic_black_button"/>

        <com.sotaiga.apps.gimcanace20.ui.ButtonCaption
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_alignParentEnd="true"
            style="@style/action_button"
            android:contentDescription="@string/login_button_content_description"
            android:text="@string/login_button_text" />

    </RelativeLayout>

    <!-- topbar -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topbar_relative_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.sotaiga.apps.gimcanace20.ui.TextViewText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/login_text"
                android:textColor="@android:color/black"
                android:textSize="19sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nom_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/login_nom_hint"
                app:startIconDrawable="@drawable/ic_team_black"
                app:startIconContentDescription="@string/login_nom_content_description"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nom_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/capriola"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/login_email_hint"
                app:startIconDrawable="@drawable/ic_email_black"
                app:startIconContentDescription="@string/login_email_content_description"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/capriola"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pin_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/login_pin_hint"
                app:startIconDrawable="@drawable/ic_key_black"
                app:startIconContentDescription="@string/login_pin_content_description"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pin_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/capriola"
                    android:inputType="numberPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
