<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/ocre"
    tools:context="com.sotaiga.apps.gimcanace20.MainActivity">

    <RelativeLayout
        android:id="@+id/topbar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/topbar_padding"
        android:background="@drawable/selector_topbar_background">

        <ImageButton
            android:id="@+id/main_menu_button"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/selector_round_menu_button_src"
            android:contentDescription="@string/main_menu_button_content_description"
            android:clickable="true"
            android:focusable="true"
            style="@style/generic_black_button"/>

        <com.sotaiga.apps.gimcanace20.ui.ButtonCaption
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            style="@style/action_button"
            android:contentDescription="@string/start_button_content_description"
            android:text="@string/start_button_text" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topbar_relative_layout"
        android:layout_marginLeft="@dimen/lang_horizontal_padding"
        android:layout_marginRight="@dimen/lang_horizontal_padding"
        android:layout_marginTop="@dimen/activity_vertical_big_margin"
        android:layout_marginBottom="@dimen/activity_vertical_big_margin">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/speech_balloon"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@android:color/transparent"
                android:weightSum="270">

                <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
                    android:id="@+id/main_hola"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="156"
                    android:gravity="center"
                    android:textSize="@dimen/lang_speech_balloon_button_textsize"
                    android:textColor="@android:color/white"
                    android:background="@android:color/transparent"
                    android:text="@string/hola"/>

            </LinearLayout>

        </FrameLayout>

        <com.sotaiga.apps.gimcanace20.ui.TextViewCaption
            android:id="@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frame_layout"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:text="@string/main_welcome"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
